--- a/.env.default
+++ b/.env.default
@@ -3,11 +3,11 @@ NODE_DATA_DIR=${HOME}/.${PROJECT}
 NODE_BITCOIN_NETWORK=10.1.0.0/16
 
 # bitcoind
-APP_BITCOIN_NAME=bitcoind
-APP_BITCOIN_VERSION=26.0
-APP_BITCOIN_IMAGE=${PROJECT}/${APP_BITCOIN_NAME}:${APP_BITCOIN_VERSION}
-APP_BITCOIN_DOCKER=docker/${APP_BITCOIN_VERSION}
-APP_BITCOIN_IP=10.1.0.2
+APP_BITCOIND_NAME=bitcoind
+APP_BITCOIND_VERSION=26.0
+APP_BITCOIND_IMAGE=${PROJECT}/${APP_BITCOIND_NAME}:${APP_BITCOIND_VERSION}
+APP_BITCOIND_DOCKER=docker/${APP_BITCOIND_VERSION}
+APP_BITCOIND_IP=10.1.0.2
 
 # use app/bitcoind/scripts/rpcauth.py to generate password hashes
 # the $ separator must be escaped as $$ to prevent parameter substitution
