changed sub-network configuration moved them under 10,1.x.x

--- a/node/docker-compose.yml
+++ b/node/docker-compose.yml
@@ -1,6 +1,10 @@
 version: "3.7"
 
 networks:
+  default:
+    ipam:
+      config:
+        - subnet: "${NODE_DEFAULT_NETWORK}"
   bitcoin:
     ipam:
       config:
