--- a/apps/bitcoind/docker-compose.yml
+++ b/apps/bitcoind/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     volumes:
       - "${NODE_DATA_DIR}/bitcoind/data/bitcoin:/data/.bitcoin"
     ports:
-      - "127.0.0.1:8332:8332"
+      - "${NODE_BITCOIND_RPC_IP}:${NODE_BITCOIND_RPC_PORT}:8332"
     networks:
       bitcoin:
         ipv4_address: ${APP_BITCOIND_IP}
@@ -17,8 +17,8 @@ services:
       - "-debug=rpc"
       - "-txindex"
       - "-rpcbind=127.0.0.1"
-      - "-rpcallowip=127.0.0.1"
       - "-rpcbind=${APP_BITCOIND_IP}"
-      - "-rpcallowip=${NODE_BITCOIN_NETWORK}"
+      - "-rpcallowip=127.0.0.1"
+      - "-rpcallowip=${NODE_BITCOIN_NETWORK}" # TODO need HAProxy
       - "-rpcauth=${APP_BITCOIND_USER_RPCAUTH}"
       - "-rpcauth=${APP_BITCOIND_MEMPOOL_RPCAUTH}"
