--- a/.env.default
+++ b/.env.default
@@ -5,6 +5,9 @@ NODE_BITCOIN_NETWORK=10.1.1.0/24
 NODE_MEMPOOL_NETWORK=10.1.2.0/24
 NODE_BITCOIND_RPC_IP=0.0.0.0
 NODE_BITCOIND_RPC_PORT=8332
+NODE_HAPROXY_VERSION=2.8.7
+NODE_HAPROXY_IMAGE=${PROJECT}/haproxy:${NODE_HAPROXY_VERSION}
+NODE_HAPROXY_IP=10.1.0.2
 
 # bitcoind
 APP_BITCOIND_NAME=bitcoind
