fixed haproxy netwroking so it only binds to the IP on one network, the proxynet

--- a/node/docker-compose.yml
+++ b/node/docker-compose.yml
@@ -1,7 +1,9 @@
 version: "3.7"
 
 networks:
-  default:
+  # port bindings happen on the first network alphabetical order
+  # HAProxy connects to all networks but binds only on the proxynet
+  a0_proxynet:
     ipam:
       config:
         - subnet: "${NODE_DEFAULT_NETWORK}"
