--- a/node/haproxy/haproxy.cfg
+++ b/node/haproxy/haproxy.cfg
@@ -9,7 +9,7 @@ defaults
     timeout server 50000ms
 
 frontend bitcoind-rpc
-    bind *:${NODE_BITCOIND_RPC_PORT}
+    bind ${NODE_HAPROXY_IP}:${APP_BITCOIND_RPC_PORT}
     default_backend bitcoind-rpc
 
 backend bitcoind-rpc
