simplified config by removing hardcoded ips

--- a/.env.default
+++ b/.env.default
@@ -1,20 +1,20 @@
 PROJECT=bitcoin-node
 NODE_DATA_DIR=${HOME}/.${PROJECT}
-NODE_DEFAULT_NETWORK=10.1.0.0/24
+NODE_HAPROXY_NETWORK=10.1.0.0/24
 NODE_BITCOIN_NETWORK=10.1.1.0/24
 NODE_MEMPOOL_NETWORK=10.1.2.0/24
-NODE_BITCOIND_RPC_IP=0.0.0.0
-NODE_BITCOIND_RPC_PORT=8332
+
+# HAProxy
 NODE_HAPROXY_VERSION=2.8.7
 NODE_HAPROXY_IMAGE=${PROJECT}/haproxy:${NODE_HAPROXY_VERSION}
-NODE_HAPROXY_IP=10.1.0.2
+NODE_BITCOIND_RPC_IP=0.0.0.0
+NODE_BITCOIND_RPC_PORT=8332
 
 # bitcoind
 APP_BITCOIND_NAME=bitcoind
 APP_BITCOIND_VERSION=26.0
 APP_BITCOIND_IMAGE=${PROJECT}/${APP_BITCOIND_NAME}:${APP_BITCOIND_VERSION}
 APP_BITCOIND_DOCKER=docker/${APP_BITCOIND_VERSION}
-APP_BITCOIND_IP=10.1.1.2
 
 # use app/bitcoind/scripts/rpcauth.py to generate password hashes
 # the $ separator must be escaped as $$ to prevent parameter substitution
