--- a/apps/mempool/docker-compose.yml
+++ b/apps/mempool/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - mempool-db
     environment:
       MEMPOOL_BACKEND: "none"
-      CORE_RPC_HOST: "${APP_BITCOIND_IP}"
+      CORE_RPC_HOST: "bitcoind"
       CORE_RPC_PORT: "8332"
       CORE_RPC_USERNAME: "mempool"
       CORE_RPC_PASSWORD: "${APP_MEMPOOL_BITCOIND_PASSWORD}"
