--- a/node/haproxy/haproxy.cfg
+++ b/node/haproxy/haproxy.cfg
@@ -9,8 +9,8 @@ defaults
     timeout server 50000ms
 
 frontend bitcoind-rpc
-    bind ${NODE_HAPROXY_IP}:${APP_BITCOIND_RPC_PORT}
+    bind haproxy:8332
     default_backend bitcoind-rpc
 
 backend bitcoind-rpc
-    server bitcoind-rpc1 ${APP_BITCOIND_IP}:${APP_BITCOIND_RPC_PORT} maxconn 32
+    server bitcoind-rpc1 bitcoind:8332 maxconn 32
