--- a/node/haproxy/haproxy.cfg
+++ b/node/haproxy/haproxy.cfg
@@ -1,9 +1,12 @@
 global
     daemon
     maxconn 100
+    log stdout format raw local0 info
 
 defaults
     mode http
+    option httplog
+    log global
     timeout connect 5000ms
     timeout client 50000ms
     timeout server 50000ms
