--- a/.env.default
+++ b/.env.default
@@ -7,8 +7,8 @@ NODE_MEMPOOL_NETWORK=10.1.2.0/24
 # HAProxy
 NODE_HAPROXY_VERSION=2.8.7
 NODE_HAPROXY_IMAGE=${PROJECT}/haproxy:${NODE_HAPROXY_VERSION}
-NODE_BITCOIND_RPC_IP=0.0.0.0
-NODE_BITCOIND_RPC_PORT=8332
+NODE_HAPROXY_EXPOSE_IP=0.0.0.0
+NODE_HAPROXY_EXPOSE_BITCOIND_RPC_PORT=8332
 
 # bitcoind
 APP_BITCOIND_NAME=bitcoind
