added mempool to haproxy

--- a/.env.default
+++ b/.env.default
@@ -9,6 +9,7 @@ NODE_HAPROXY_VERSION=2.8.7
 NODE_HAPROXY_IMAGE=${PROJECT}/haproxy:${NODE_HAPROXY_VERSION}
 NODE_HAPROXY_EXPOSE_IP=0.0.0.0
 NODE_HAPROXY_EXPOSE_BITCOIND_RPC_PORT=8332
+NODE_HAPROXY_EXPOSE_MEMPOOL_PORT=8080
 
 # bitcoind
 APP_BITCOIND_NAME=bitcoind
