--- a/apps/mempool/docker-compose.yml
+++ b/apps/mempool/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 
 services:
 
-  mempool-frontend:
+  mempool:
     depends_on:
       - mempool-backend
       - mempool-db
@@ -14,8 +14,6 @@ services:
     restart: on-failure
     stop_grace_period: 15s
     command: "./wait-for mempool-db:3306 --timeout=30 -- nginx -g 'daemon off;'"
-    ports:
-      - 9080:8080
     networks:
       - mempool
 
