--- a/node/haproxy/haproxy.cfg
+++ b/node/haproxy/haproxy.cfg
@@ -17,3 +17,10 @@ frontend bitcoind-rpc
 
 backend bitcoind-rpc
     server bitcoind-rpc1 bitcoind:8332 maxconn 32
+
+frontend mempool
+    bind haproxy:8080
+    default_backend mempool
+
+backend mempool
+    server mempool1 mempool:8080 maxconn 32
