--- a/node/haproxy/docker-compose.yml
+++ b/node/haproxy/docker-compose.yml
@@ -4,11 +4,15 @@ services:
 
   haproxy:
     image: "${NODE_HAPROXY_IMAGE}"
+    depends_on:
+      - bitcoind
+      - mempool
     networks:
       a0_proxynet:
       bitcoin:
       mempool:
     ports:
       - "${NODE_HAPROXY_EXPOSE_IP}:${NODE_HAPROXY_EXPOSE_BITCOIND_RPC_PORT}:8332"
+      - "${NODE_HAPROXY_EXPOSE_IP}:${NODE_HAPROXY_EXPOSE_MEMPOOL_PORT}:8080"
     sysctls:
       net.ipv4.ip_unprivileged_port_start: 0
