--- a/node/haproxy/haproxy.cfg
+++ b/node/haproxy/haproxy.cfg
@@ -18,9 +18,14 @@ frontend bitcoind-rpc
 backend bitcoind-rpc
     server bitcoind-rpc1 bitcoind:8332 maxconn 32
 
-frontend mempool
-    bind haproxy:8080
-    default_backend mempool
+frontend http
+    bind haproxy:80
+    capture request header Host len 30
+
+    acl host_hdr_mempool hdr_dom(host) -i mempool.local -i mempool.localhost
+
+    use_backend mempool if host_hdr_mempool
 
 backend mempool
     server mempool1 mempool:8080 maxconn 32
+
