--- a/apps/mempool/docker-compose.yml
+++ b/apps/mempool/docker-compose.yml
@@ -20,9 +20,13 @@ services:
   mempool-backend:
     depends_on:
       - bitcoind
+      - electrs
       - mempool-db
     environment:
-      MEMPOOL_BACKEND: "none"
+      MEMPOOL_BACKEND: "electrum"
+      ELECTRUM_HOST: "electrs"
+      ELECTRUM_PORT: "50001"
+      ELECTRUM_TLS_ENABLED: "false"
       CORE_RPC_HOST: "bitcoind"
       CORE_RPC_PORT: "8332"
       CORE_RPC_USERNAME: "mempool"
@@ -42,6 +46,7 @@ services:
       - ${NODE_DATA_DIR}/mempool/data/backend:/backend/cache
     networks:
       - bitcoin
+      - electrum
       - mempool
 
   mempool-db:
