--- a/.env.default
+++ b/.env.default
@@ -3,6 +3,7 @@ NODE_DATA_DIR=${HOME}/.${PROJECT}
 NODE_HAPROXY_NETWORK=10.1.0.0/24
 NODE_BITCOIN_NETWORK=10.1.1.0/24
 NODE_MEMPOOL_NETWORK=10.1.2.0/24
+NODE_ELECTRS_NETWORK=10.1.3.0/24
 
 # HAProxy
 NODE_HAPROXY_VERSION=2.8.7
@@ -10,6 +11,7 @@ NODE_HAPROXY_IMAGE=${PROJECT}/haproxy:${NODE_HAPROXY_VERSION}
 NODE_HAPROXY_EXPOSE_IP=0.0.0.0
 NODE_HAPROXY_EXPOSE_HTTP_PORT=80
 NODE_HAPROXY_EXPOSE_BITCOIND_RPC_PORT=8332
+NODE_HAPROXY_EXPOSE_ELECTRS_RPC_PORT=50001
 
 # bitcoind
 APP_BITCOIND_NAME=bitcoind
@@ -33,3 +35,8 @@ APP_MEMPOOL_BACKEND_IMAGE=${PROJECT}/${APP_MEMPOOL_BACKEND_NAME}:${APP_MEMPOOL_V
 APP_MEMPOOL_BITCOIND_PASSWORD=mempool
 APP_MEMPOOL_MYSQL_PASSWORD=mempool
 APP_MEMPOOL_MYSQL_ROOT_PASSWORD=admin
+
+# electrs
+APP_ELECTRS_NAME=electrs
+APP_ELECTRS_VERSION=v0.10.4
+APP_ELECTRS_IMAGE=${PROJECT}/${APP_ELECTRS_NAME}:${APP_ELECTRS_NAME}
