--- a/node/haproxy/haproxy.cfg
+++ b/node/haproxy/haproxy.cfg
@@ -18,6 +18,16 @@ frontend bitcoind-rpc
 backend bitcoind-rpc
     server bitcoind-rpc1 bitcoind:8332 maxconn 32
 
+frontend electrs-rpc
+	bind haproxy:50001
+	mode tcp
+	option tcplog
+	default_backend electrs-rpc
+
+backend electrs-rpc
+	mode tcp
+	server electrs1 electrs:50001 maxconn 32
+
 frontend http
     bind haproxy:80
     capture request header Host len 30
@@ -28,4 +38,3 @@ frontend http
 
 backend mempool
     server mempool1 mempool:8080 maxconn 32
-
