migrated host names to fully qualified names for better network segregation

--- a/.env.default
+++ b/.env.default
@@ -1,6 +1,6 @@
 PROJECT=bitcoin-node
 NODE_DATA_DIR=${HOME}/.${PROJECT}
-NODE_HAPROXY_NETWORK=10.1.0.0/24
+NODE_EXTERNAL_NETWORK=10.1.0.0/24
 NODE_BITCOIN_NETWORK=10.1.1.0/24
 NODE_MEMPOOL_NETWORK=10.1.2.0/24
 NODE_ELECTRS_NETWORK=10.1.3.0/24
