--- a/node/haproxy/haproxy.cfg
+++ b/node/haproxy/haproxy.cfg
@@ -12,24 +12,24 @@ defaults
     timeout server 50000ms
 
 frontend bitcoind-rpc
-    bind haproxy:8332
+    bind haproxy.external.local:8332
     default_backend bitcoind-rpc
 
 backend bitcoind-rpc
-    server bitcoind-rpc1 bitcoind:8332 maxconn 32
+    server bitcoind-rpc1 bitcoind.bitcoin.local:8332 maxconn 32
 
 frontend electrs-rpc
-	bind haproxy:50001
+	bind haproxy.external.local:50001
 	mode tcp
 	option tcplog
 	default_backend electrs-rpc
 
 backend electrs-rpc
 	mode tcp
-	server electrs1 electrs:50001 maxconn 32
+	server electrs1 electrs.electrum.local:50001 maxconn 32
 
 frontend http
-    bind haproxy:80
+    bind haproxy.external.local:80
     capture request header Host len 30
 
     acl host_hdr_mempool hdr_dom(host) -i mempool.local -i mempool.localhost
@@ -37,4 +37,4 @@ frontend http
     use_backend mempool if host_hdr_mempool
 
 backend mempool
-    server mempool1 mempool:8080 maxconn 32
+    server mempool1 frontend.mempool.local:8080 maxconn 32
