--- a/apps/electrs/docker-compose.yml
+++ b/apps/electrs/docker-compose.yml
@@ -9,15 +9,18 @@ services:
     environment:
       ELECTRS_LOG_FILTERS: "INFO"
       ELECTRS_NETWORK: "bitcoin"
-      ELECTRS_DAEMON_RPC_ADDR: "bitcoind:8332"
-      ELECTRS_DAEMON_P2P_ADDR: "bitcoind:8333"
-      ELECTRS_ELECTRUM_RPC_ADDR: "0.0.0.0:50001"
+      ELECTRS_DAEMON_RPC_ADDR: "bitcoind.bitcoin.local:8332"
+      ELECTRS_DAEMON_P2P_ADDR: "bitcoind.bitcoin.local:8333"
+      ELECTRS_ELECTRUM_RPC_ADDR: "electrs.electrum.local:50001"
       ELECTRS_SERVER_BANNER: "Electrs (${APP_ELECTRS_VERSION})"
       ELECTRS_DB_DIR: "/data/db"
       ELECTRS_COOKIE_FILE: "/data/.bitcoin/.cookie"
+      ELECTRS_SKIP_BLOCK_DOWNLOAD_WAIT: "true"
     volumes:
       - "${NODE_DATA_DIR}/bitcoind/data/bitcoin:/data/.bitcoin:ro"
       - "${NODE_DATA_DIR}/electrs/data/db:/data/db"
     networks:
-      electrum:
       bitcoin:
+      electrum:
+        aliases:
+          - electrs.electrum.local
