--- a/apps/mempool/docker-compose.yml
+++ b/apps/mempool/docker-compose.yml
@@ -8,14 +8,16 @@ services:
       - mempool-db
     environment:
       FRONTEND_HTTP_PORT: "8080"
-      BACKEND_MAINNET_HTTP_HOST: "mempool-backend"
+      BACKEND_MAINNET_HTTP_HOST: "backend.mempool.local"
     image: ${APP_MEMPOOL_FRONTEND_IMAGE}
     user: "1000:1000"
     restart: on-failure
     stop_grace_period: 15s
     command: "./wait-for mempool-db:3306 --timeout=30 -- nginx -g 'daemon off;'"
     networks:
-      - mempool
+      mempool:
+        aliases:
+         - frontend.mempool.local
 
   mempool-backend:
     depends_on:
@@ -24,7 +26,7 @@ services:
       - mempool-db
     environment:
       MEMPOOL_BACKEND: "electrum"
-      ELECTRUM_HOST: "electrs"
+      ELECTRUM_HOST: "electrs.electrum.local"
       ELECTRUM_PORT: "50001"
       ELECTRUM_TLS_ENABLED: "false"
       CORE_RPC_HOST: "bitcoind"
@@ -32,7 +34,7 @@ services:
       CORE_RPC_USERNAME: "mempool"
       CORE_RPC_PASSWORD: "${APP_MEMPOOL_BITCOIND_PASSWORD}"
       DATABASE_ENABLED: "true"
-      DATABASE_HOST: "mempool-db"
+      DATABASE_HOST: "db.mempool.local"
       DATABASE_DATABASE: "mempool"
       DATABASE_USERNAME: "mempool"
       DATABASE_PASSWORD: "${APP_MEMPOOL_MYSQL_PASSWORD}"
@@ -45,9 +47,11 @@ services:
     volumes:
       - ${NODE_DATA_DIR}/mempool/data/backend:/backend/cache
     networks:
-      - bitcoin
-      - electrum
-      - mempool
+      bitcoin:
+      electrum:
+      mempool:
+        aliases:
+          - backend.mempool.local
 
   mempool-db:
     environment:
@@ -62,5 +66,6 @@ services:
     volumes:
       - ${NODE_DATA_DIR}/mempool/data/mysql:/var/lib/mysql
     networks:
-      - mempool
-
+      mempool:
+        aliases:
+          - db.mempool.local
