upgraded fixed mempool backend build as it changed after they added rust
The docker build command is from the CI on-tag.yml github script
https://github.com/mempool/mempool/blob/master/.github/workflows/on-tag.yml#L96-L107

--- a/apps/mempool/Makefile
+++ b/apps/mempool/Makefile
@@ -4,13 +4,18 @@ build: init build-frontend build-backend
 clean: clean-frontend clean-backend
 
 init:
-	cd source && test -f backend/Dockerfile || ./docker/init.sh
+	cd source && cmp -s backend/Dockerfile docker/backend/Dockerfile || ./docker/init.sh
 
 build-frontend:
 	docker build -t $(APP_MEMPOOL_FRONTEND_IMAGE) -f source/docker/frontend/Dockerfile source/frontend
 
 build-backend:
-	docker build -t $(APP_MEMPOOL_BACKEND_IMAGE) -f source/docker/backend/Dockerfile source/backend
+	cd source && docker buildx build -t $(APP_MEMPOOL_BACKEND_IMAGE) \
+		--build-context rustgbt=./rust \
+		--build-context backend=./backend \
+		--output "type=docker" \
+		--build-arg commitHash=$(APP_MEMPOOL_VERSION) \
+		backend
 
 clean-frontend:
 	docker rmi $(APP_MEMPOOL_FRONTEND_IMAGE)
